Revisions to parity plot based on Evan feedback. Calculate how many points had QC change by CM in Stage 3

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -442,6 +442,68 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Check how many points were re-added in Stage 3\n",
+    "\n",
+    "Carbon Mapper changed QC during stage 3, and re-added some points that were previously removed due to poor quality. Check how many these were\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     phase_iii     stage_1_qc     stage_2_qc stage_3_qc\n",
+      "2            1  fail_operator  fail_operator   pass_all\n",
+      "12           1  fail_operator  fail_operator   pass_all\n",
+      "14           1  fail_operator  fail_operator   pass_all\n",
+      "15           1  fail_operator  fail_operator   pass_all\n",
+      "36           1  fail_operator  fail_operator   pass_all\n",
+      "40           1  fail_operator  fail_operator   pass_all\n",
+      "50           1  fail_operator  fail_operator   pass_all\n",
+      "74           1  fail_operator  fail_operator   pass_all\n",
+      "98           1  fail_operator  fail_operator   pass_all\n",
+      "103          0  fail_operator  fail_operator   pass_all\n",
+      "104          0  fail_operator  fail_operator   pass_all\n",
+      "105          1  fail_operator  fail_operator   pass_all\n",
+      "108          1  fail_operator  fail_operator   pass_all\n",
+      "115          1  fail_operator  fail_operator   pass_all\n"
+     ]
+    }
+   ],
+   "source": [
+    "from methods_source import load_overpass_summary\n",
+    "import pandas as pd\n",
+    "\n",
+    "operator = 'Carbon Mapper'\n",
+    "overpasses_1 = load_overpass_summary(operator, stage=1)\n",
+    "overpasses_2 = load_overpass_summary(operator, stage=2)\n",
+    "overpasses_3 = load_overpass_summary(operator, stage=3)\n",
+    "\n",
+    "summarize_phase_iii = pd.DataFrame()\n",
+    "summarize_phase_iii['phase_iii'] = overpasses_1['phase_iii']\n",
+    "summarize_phase_iii['stage_1_qc'] = overpasses_1['qc_summary']\n",
+    "summarize_phase_iii['stage_2_qc'] = overpasses_2['qc_summary']\n",
+    "summarize_phase_iii['stage_3_qc'] = overpasses_3['qc_summary']\n",
+    "\n",
+    "\n",
+    "stages_mask = (summarize_phase_iii['stage_1_qc'] == 'fail_operator') & (summarize_phase_iii['stage_2_qc'] == 'fail_operator') & (summarize_phase_iii['stage_3_qc'] == 'pass_all')\n",
+    "\n",
+    "switch_qc_status = summarize_phase_iii.loc[stages_mask]\n",
+    "print(switch_qc_status)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### GHGSat summary for results"
    ],
    "metadata": {
@@ -450,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -512,7 +574,7 @@
       "(sigma from gas composition: 0.002693)\n",
       "(combined total sigma: 0.092191)\n",
       "\n",
-      "Smallest detected plume by GHGSat:\n",
+      "Smallest detected plume by GHGSat (that passes ALL QC):\n",
       "Release Rate: 2.9122165317825 kg CH4 / hr\n",
       "[2.861638197654512, 2.962794865910489, 95% CI]\n",
       "(sigma from gas flow: 0.023696)\n",
@@ -535,7 +597,8 @@
     "from writing_analysis import operator_releases_summary_stats\n",
     "# GHGSat\n",
     "operator = 'GHGSat'\n",
-    "operator_releases_summary_stats(operator)"
+    "operator_releases_summary_stats(operator)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
