--- a/07_qc_comparison.ipynb
+++ b/07_qc_comparison.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -346,11 +346,13 @@
       "\n",
       "Compare the strict discard criteria with the lax_not_strict criteria:\n",
       "-The calculated p-value of 0.0852 is greater than 0.05, the difference between the two complete overpass sets is not statistically significant.\n",
-      "\n"
+      "\n",
+      "{'strict': 41.85119115674852, 'lax': 44.48088697715699, 'lax_not_strict': 62.231333764914154}\n"
      ]
     }
    ],
    "source": [
+    "from methods_error_calculations import evaluate_error_profile\n",
     "# Evaluate percent error for Kairos, Stage 1\n",
     "operator = 'Kairos'\n",
     "stage = 1\n",
