--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -685,16 +685,9 @@
       "(combined total sigma: 0.053109)\n",
       "\n",
       "Number of releases between 15 kgh and 30 kgh: 38\n",
-      " False negatives were 7.894737% of releases in this range\n"
+      " False negatives were 7.894737% of releases in this range\n",
+      "Number of releases greater than 25 kg/h and less than 30: 11 \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "0.07894736842105263"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -724,7 +717,11 @@
     "# How many releases were between 15 and 30 kg / hr\n",
     "range_mask = (pass_all_qc['release_rate_kgh'] > 15 ) & (pass_all_qc['release_rate_kgh'] < 30 )\n",
     "releases_15_30 = pass_all_qc.loc[range_mask]\n",
-    "print(f'Number of releases between 15 kgh and 30 kgh: {len(releases_15_30)}\\n False negatives were {len(large_false_negatives)/len(releases_15_30)*100:1f}% of releases in this range')\n"
+    "print(f'Number of releases between 15 kgh and 30 kgh: {len(releases_15_30)}\\n False negatives were {len(large_false_negatives)/len(releases_15_30)*100:1f}% of releases in this range')\n",
+    "\n",
+    "# What was total number of releases above 25 kgh\n",
+    "range_mask_25 = (pass_all_qc['release_rate_kgh'] > 25 ) & (pass_all_qc['release_rate_kgh'] < 30 )\n",
+    "print(f'Number of releases greater than 25 kg/h and less than 30: {len(pass_all_qc.loc[range_mask_25])} ')"
    ],
    "metadata": {
     "collapsed": false
@@ -1609,16 +1606,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Safety perimeter: 160 feet, or 48.8 meters\n",
       "Tall stack height: 7.3 meters\n",
       " Short stack height: 3.0 meters\n",
       "\n",
-      "Max trailer pressure is: 16.6487 MPa\n",
+      "Max trailer pressure is: 16.6487 MPa (2400 psig)\n",
+      "\n",
+      "Min trailer pressure is: 3.5487 MPa (500 psig)\n",
       "\n",
       "Pressure outlet from RT-30 is: 1.1356 - 1.4803 MPa\n",
       "\n"
@@ -1630,6 +1630,11 @@
     "\n",
     "# Feet per meter\n",
     "feet_per_meter = 3.28084\n",
+    "\n",
+    "# Safety perimeter\n",
+    "safety_feet = 160\n",
+    "\n",
+    "print(f'Safety perimeter: {safety_feet} feet, or {safety_feet / feet_per_meter:0.1f} meters')\n",
     "\n",
     "# Stack heights:\n",
     "tall_stack_ft = 24\n",
@@ -1646,9 +1651,16 @@
     "    return (psig + atm_psi)/psi_per_mpa\n",
     "\n",
     "# Trailer pressure\n",
+    "# Max trailer pressure\n",
     "max_pressure_psig = 2400\n",
     "max_pressure_mpa = psig_to_mpa(max_pressure_psig)\n",
-    "print(f\"Max trailer pressure is: {max_pressure_mpa:0.4f} MPa\\n\")\n",
+    "print(f\"Max trailer pressure is: {max_pressure_mpa:0.4f} MPa ({max_pressure_psig:0.0f} psig)\\n\")\n",
+    "\n",
+    "# Min trailer pressure\n",
+    "min_trailer_psig = 500\n",
+    "min_pressure_mpa = psig_to_mpa(min_trailer_psig)\n",
+    "print(f\"Min trailer pressure is: {min_pressure_mpa:0.4f} MPa ({min_trailer_psig:0.0f} psig)\\n\")\n",
+    "\n",
     "\n",
     "# Pressure regulation skid outlet pressure\n",
     "rt30_low_psig = 150\n",
