Probability of detection curve, revisions to paper based on Evan's feedback

--- a/13_logistic_pod.ipynb
+++ b/13_logistic_pod.ipynb
@@ -40,22 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "from methods_source import load_overpass_summary, feet_per_meter, calc_avg_windspeed\n",
-    "import pandas as pd\n",
-    "operator = load_overpass_summary('Kairos', 1, strict_discard=False)\n",
-    "feet_per_meter = feet_per_meter()\n",
-    "\n",
-    "# Include all variables used in Conrad et al., 2023 even if I won't ultimately use them\n",
-    "op_POD_variables = pd.DataFrame()\n",
-    "op_POD_variables['overpass_id'] = operator['overpass_id']\n",
-    "op_POD_variables['overpass_datetime'] = operator['overpass_datetime']\n",
-    "op_POD_variables['h'] = operator['altitude_feet'] / feet_per_meter # flight altitude in m\n",
-    "op_POD_variables['u'] = operator['overpass_datetime'].apply(calc_avg_windspeed) # windspeed in m/s\n",
-    "op_POD_variables['Q'] = operator['release_rate_kgh'] # release rate in kg / hr\n",
-    "op_POD_variables['D'] = operator['operator_detected'].apply(int) # operator detected as 0 or 1\n",
+    "# from methods_source import load_overpass_summary, feet_per_meter, calc_avg_windspeed\n",
+    "# import pandas as pd\n",
+    "# operator = load_overpass_summary('Kairos', 1, strict_discard=False)\n",
+    "# feet_per_meter = feet_per_meter()\n",
+    "#\n",
+    "# # Include all variables used in Conrad et al., 2023 even if I won't ultimately use them\n",
+    "# op_POD_variables = pd.DataFrame()\n",
+    "# op_POD_variables['overpass_id'] = operator['overpass_id']\n",
+    "# op_POD_variables['overpass_datetime'] = operator['overpass_datetime']\n",
+    "# op_POD_variables['h'] = operator['altitude_feet'] / feet_per_meter # flight altitude in m\n",
+    "# op_POD_variables['u'] = operator['overpass_datetime'].apply(calc_avg_windspeed) # windspeed in m/s\n",
+    "# op_POD_variables['Q'] = operator['release_rate_kgh'] # release rate in kg / hr\n",
+    "# op_POD_variables['D'] = operator['operator_detected'].apply(int) # operator detected as 0 or 1\n",
     "\n",
     "# Code for Conrad et al., 2023\n",
     "# def make_predictor_function(h, u, Q):\n",
@@ -74,35 +74,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model intercept (bo): [-2.04562269]\n",
-      "Model slope (b1): [[0.32951666]]\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'feet_per_meter' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mUnboundLocalError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 37\u001B[0m\n\u001B[1;32m     35\u001B[0m operator \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mKairos\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     36\u001B[0m stage\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m\n\u001B[0;32m---> 37\u001B[0m test \u001B[38;5;241m=\u001B[39m \u001B[43mmake_logistic_regression\u001B[49m\u001B[43m(\u001B[49m\u001B[43moperator\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43moperator\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mstage\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mstage\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     39\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mModel intercept (bo): \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtest\u001B[38;5;241m.\u001B[39mintercept_\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124mModel slope (b1): \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtest\u001B[38;5;241m.\u001B[39mcoef_\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     40\u001B[0m \u001B[38;5;28mprint\u001B[39m(model\u001B[38;5;241m.\u001B[39mintercept_)\n",
+      "Cell \u001B[0;32mIn[2], line 12\u001B[0m, in \u001B[0;36mmake_logistic_regression\u001B[0;34m(operator, stage, strict_discard, time_ave, gas_comp_source)\u001B[0m\n\u001B[1;32m      9\u001B[0m operator_df \u001B[38;5;241m=\u001B[39m load_overpass_summary(operator\u001B[38;5;241m=\u001B[39moperator, stage\u001B[38;5;241m=\u001B[39mstage, strict_discard\u001B[38;5;241m=\u001B[39mstrict_discard, time_ave\u001B[38;5;241m=\u001B[39mtime_ave, gas_comp_source\u001B[38;5;241m=\u001B[39mgas_comp_source)\n\u001B[1;32m     11\u001B[0m \u001B[38;5;66;03m# Load feet per meter\u001B[39;00m\n\u001B[0;32m---> 12\u001B[0m feet_per_meter \u001B[38;5;241m=\u001B[39m \u001B[43mfeet_per_meter\u001B[49m()\n\u001B[1;32m     14\u001B[0m \u001B[38;5;66;03m# Include all variables used in Conrad et al., 2023 even if I won't ultimately use them\u001B[39;00m\n\u001B[1;32m     15\u001B[0m op_POD_variables \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mDataFrame()\n",
+      "\u001B[0;31mUnboundLocalError\u001B[0m: local variable 'feet_per_meter' referenced before assignment"
      ]
     }
    ],
    "source": [
     "# Apply logistic regression\n",
     "import numpy as np\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from methods_source import make_logistic_regression\n",
     "\n",
-    "# Filter op_POD_variables to only include data below a threshold max kgh\n",
-    "threshold = 30 # kgh\n",
-    "op_POD_variables = op_POD_variables.loc[op_POD_variables.Q <= threshold]\n",
     "\n",
-    "# Reshape required for Logistic function\n",
+    "operator = 'Kairos'\n",
+    "stage=1\n",
+    "kairos_logistic = make_logistic_regression(operator=operator, stage=stage)\n",
     "\n",
-    "x = op_POD_variables['Q'].values.reshape(-1, 1)\n",
-    "y = op_POD_variables['D'].values.reshape(-1, 1).ravel()\n",
-    "model = LogisticRegression(solver='liblinear', random_state=0)\n",
-    "model.fit(x, y)\n",
     "\n",
-    "print(f'Model intercept (bo): {model.intercept_}\\nModel slope (b1): {model.coef_}')"
+    "def plot_logistic_regression(ax, threshold, operator, stage, strict_discard, time_ave, gas_comp_source):\n",
+    "    operator_model = make_logistic_regression(operator=operator, stage=stage, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source)\n",
+    "\n",
+    "    # input values for plotting\n",
+    "    x_plot = np.linspace(0, threshold, 500)\n",
+    "\n",
+    "    # calculate the probability from the model\n",
+    "    y_plot = operator_model.predict_proba(x_plot.reshape(-1, 1))[:,1]\n",
+    "    ax.plot(x_plot, y_plot, label='Logistic best fit')\n",
+    "    return ax\n"
    ],
    "metadata": {
     "collapsed": false
