--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -452,12 +452,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of measurements to be re-added by Carbon Mapper in Stage 2: 0\n",
       "     phase_iii     stage_1_qc     stage_2_qc stage_3_qc\n",
       "2            1  fail_operator  fail_operator   pass_all\n",
       "12           1  fail_operator  fail_operator   pass_all\n",
@@ -485,16 +486,23 @@
     "overpasses_2 = load_overpass_summary(operator, stage=2)\n",
     "overpasses_3 = load_overpass_summary(operator, stage=3)\n",
     "\n",
+    "# Make dataframe of that summarizes the QC from all three stages\n",
     "summarize_phase_iii = pd.DataFrame()\n",
     "summarize_phase_iii['phase_iii'] = overpasses_1['phase_iii']\n",
     "summarize_phase_iii['stage_1_qc'] = overpasses_1['qc_summary']\n",
     "summarize_phase_iii['stage_2_qc'] = overpasses_2['qc_summary']\n",
     "summarize_phase_iii['stage_3_qc'] = overpasses_3['qc_summary']\n",
     "\n",
+    "stage2_mask = (summarize_phase_iii['stage_1_qc'] == 'fail_operator') & (summarize_phase_iii['stage_2_qc'] == 'pass_all')\n",
+    "switch_qc_status_2 = summarize_phase_iii.loc[stage2_mask]\n",
     "\n",
-    "stages_mask = (summarize_phase_iii['stage_1_qc'] == 'fail_operator') & (summarize_phase_iii['stage_2_qc'] == 'fail_operator') & (summarize_phase_iii['stage_3_qc'] == 'pass_all')\n",
+    "print(f'Number of measurements to be re-added by Carbon Mapper in Stage 2: {len(switch_qc_status_2):0.0f}')\n",
+    "# Which overpasses failed Stage 1 and 2 Carbon Mapper QC but passed Stage 3?\n",
+    "# the phase_iii column indicates if we provided Carbon Mapper with flow rate data during Stage 3 or not (1 = yes, they were provided info on flow rate for Stage 3)\n",
     "\n",
-    "switch_qc_status = summarize_phase_iii.loc[stages_mask]\n",
+    "stage3_mask = (summarize_phase_iii['stage_1_qc'] == 'fail_operator') & (summarize_phase_iii['stage_2_qc'] == 'fail_operator') & (summarize_phase_iii['stage_3_qc'] == 'pass_all')\n",
+    "\n",
+    "switch_qc_status = summarize_phase_iii.loc[stage3_mask]\n",
     "print(switch_qc_status)"
    ],
    "metadata": {
@@ -1606,37 +1614,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Safety Perimeter and Stack Height\n",
+      "\n",
       "Safety perimeter: 160 feet, or 48.8 meters\n",
       "Tall stack height: 7.3 meters\n",
       " Short stack height: 3.0 meters\n",
       "\n",
-      "Max trailer pressure is: 16.6487 MPa (2400 psig)\n",
+      "Tall stack pipe length: 6.1 meters\n",
+      " Short stack pipe length: 1.8 meters\n",
       "\n",
+      "CNG trailer volume\n",
+      "Small Trailer Volume: 9.684 (342)\n",
+      "Large Trailer Volume: 19.808 (699.5)\n",
+      "\n",
+      "System Pressure (CNG trailers, RT-30)\n",
+      "CNG Trailer Info\n",
+      "Max trailer pressure is: 16.6487 MPa (2400 psig)\n",
       "Min trailer pressure is: 3.5487 MPa (500 psig)\n",
       "\n",
+      "RT-30 Info\n",
       "Pressure outlet from RT-30 is: 1.1356 - 1.4803 MPa\n",
-      "\n"
+      "\n",
+      "Hose pressure from CNG trailers to RT-30 rated for 34.5 (5000 psi)\n",
+      "Safety pressure release valves from RT-30: 6.6514 (950.0000)\n",
+      "\n",
+      "Tescom safety rating: 31.1277 MPa (4500 psig)\n",
+      "Tescom outlet pressure: 2.8593 MPa (400 psig)\n",
+      "Buffer tank safety valve on RT-30: 1.3079 (175.0000)\n",
+      "Cannister fill pressure: 0.2737 (25.0000)\n",
+      "Heater gas pressure: 0.1358 (5.0000)\n",
+      "Hose to metering skid has diameter of: 7.6200 cm (3 inches)\n",
+      "Thickness of pipe to release stacks: 15.24 cm (6 inches)\n",
+      "Upstream quadratherm pipe run: 355.6 cm (140 in)\n",
+      "Upstream quadratherm pipe run: 31.75 cm (12.5 in)\n",
+      "Flange is 7.62 cm (3 inches) to 5.08 cm (2 inches)\n"
      ]
     }
    ],
    "source": [
+    "from methods_source import feet_per_meter\n",
     "########## Length ##########\n",
     "\n",
+    "print('Safety Perimeter and Stack Height\\n')\n",
     "# Feet per meter\n",
-    "feet_per_meter = 3.28084\n",
+    "feet_per_meter = feet_per_meter()\n",
+    "feet_per_meter_cubic = feet_per_meter**3\n",
     "\n",
     "# Safety perimeter\n",
     "safety_feet = 160\n",
     "\n",
     "print(f'Safety perimeter: {safety_feet} feet, or {safety_feet / feet_per_meter:0.1f} meters')\n",
     "\n",
-    "# Stack heights:\n",
+    "### Stack release heights:\n",
     "tall_stack_ft = 24\n",
     "short_stack_ft = 10\n",
     "\n",
@@ -1644,17 +1679,45 @@
     "short_stack_m = short_stack_ft / feet_per_meter\n",
     "print(f'Tall stack height: {tall_stack_m:0.1f} meters\\n Short stack height: {short_stack_m:0.1f} meters\\n')\n",
     "\n",
+    "tall_stack_pipe_ft = 20\n",
+    "short_stack_pipe_ft = 6\n",
+    "\n",
+    "tall_stack_pipe_m = tall_stack_pipe_ft / feet_per_meter\n",
+    "short_stack_pipe_m = short_stack_pipe_ft / feet_per_meter\n",
+    "\n",
+    "print(f'Tall stack pipe length: {tall_stack_pipe_m:0.1f} meters\\n Short stack pipe length: {short_stack_pipe_m:0.1f} meters\\n')\n",
+    "\n",
+    "### CNG Trailer Volume:\n",
+    "print('CNG trailer volume')\n",
+    "small_trailer_ft3 = 342\n",
+    "large_trailer_ft3 = 699.5\n",
+    "\n",
+    "small_trailer_m3 = small_trailer_ft3 / feet_per_meter_cubic\n",
+    "large_trailer_m3 = large_trailer_ft3 / feet_per_meter_cubic\n",
+    "\n",
+    "print(f'Small Trailer Volume: {small_trailer_m3:0.3f} ({small_trailer_ft3})')\n",
+    "print(f'Large Trailer Volume: {large_trailer_m3:0.3f} ({large_trailer_ft3})\\n')\n",
+    "\n",
+    "\n",
     "########## Pressure ##########\n",
+    "\n",
+    "print('System Pressure (CNG trailers, RT-30)')\n",
+    "\n",
     "def psig_to_mpa(psig):\n",
     "    psi_per_mpa = 145.038\n",
     "    atm_psi = 14.7 # for converting from psig to psi\n",
     "    return (psig + atm_psi)/psi_per_mpa\n",
     "\n",
-    "# Trailer pressure\n",
+    "def psi_to_mpa(psi):\n",
+    "    psi_per_mpa = 145.038\n",
+    "    return psi / psi_per_mpa\n",
+    "\n",
+    "### Trailer pressure\n",
     "# Max trailer pressure\n",
+    "print(f'CNG Trailer Info')\n",
     "max_pressure_psig = 2400\n",
     "max_pressure_mpa = psig_to_mpa(max_pressure_psig)\n",
-    "print(f\"Max trailer pressure is: {max_pressure_mpa:0.4f} MPa ({max_pressure_psig:0.0f} psig)\\n\")\n",
+    "print(f\"Max trailer pressure is: {max_pressure_mpa:0.4f} MPa ({max_pressure_psig:0.0f} psig)\")\n",
     "\n",
     "# Min trailer pressure\n",
     "min_trailer_psig = 500\n",
@@ -1662,12 +1725,96 @@
     "print(f\"Min trailer pressure is: {min_pressure_mpa:0.4f} MPa ({min_trailer_psig:0.0f} psig)\\n\")\n",
     "\n",
     "\n",
-    "# Pressure regulation skid outlet pressure\n",
+    "### Pressure regulation skid outlet pressure\n",
+    "# Pressure regulation skid info\n",
+    "print(\"RT-30 Info\")\n",
     "rt30_low_psig = 150\n",
     "rt30_high_psig = 200\n",
     "rt30_low_mpa = psig_to_mpa(rt30_low_psig)\n",
     "rt30_high_mpa = psig_to_mpa(rt30_high_psig)\n",
-    "print(f\"Pressure outlet from RT-30 is: {rt30_low_mpa:0.4f} - {rt30_high_mpa:0.4f} MPa\\n\")"
+    "print(f\"Pressure outlet from RT-30 is: {rt30_low_mpa:0.4f} - {rt30_high_mpa:0.4f} MPa\\n\")\n",
+    "\n",
+    "hose_pressure_psi = 5000\n",
+    "hose_pressure_mpa = psi_to_mpa(hose_pressure_psi)\n",
+    "print(f'Hose pressure from CNG trailers to RT-30 rated for {hose_pressure_mpa:0.1f} ({hose_pressure_psi:0.0f} psi)')\n",
+    "\n",
+    "\n",
+    "# RT-30 safety valves\n",
+    "safety_psi = 950\n",
+    "safety_mpa = psig_to_mpa(safety_psi)\n",
+    "print(f'Safety pressure release valves from RT-30: {safety_mpa:0.4f} ({safety_psi:0.4f})\\n')\n",
+    "\n",
+    "tescom_safety_psig = 4500\n",
+    "tescom_safety_mpa = psig_to_mpa(tescom_safety_psig)\n",
+    "print(f'Tescom safety rating: {tescom_safety_mpa:0.4f} MPa ({tescom_safety_psig} psig)')\n",
+    "\n",
+    "tescom_outlet_psig = 400\n",
+    "tescom_outlet_mpa = psig_to_mpa(tescom_outlet_psig)\n",
+    "print(f'Tescom outlet pressure: {tescom_outlet_mpa:0.4f} MPa ({tescom_outlet_psig} psig)')\n",
+    "\n",
+    "# Buffer tank safety valves\n",
+    "buffer_safety_psig = 175\n",
+    "buffer_safety_mpa = psig_to_mpa(buffer_safety_psig)\n",
+    "print(f'Buffer tank safety valve on RT-30: {buffer_safety_mpa:0.4f} ({buffer_safety_psig:0.4f})')\n",
+    "\n",
+    "# Fill cannister pressure\n",
+    "cannister_psig = 25\n",
+    "cannister_mpa = psig_to_mpa(cannister_psig)\n",
+    "print(f'Cannister fill pressure: {cannister_mpa:0.4f} ({cannister_psig:0.4f})')\n",
+    "\n",
+    "# Pressure of gas to the heaters\n",
+    "heater_psig = 5\n",
+    "heater_mpa = psig_to_mpa(heater_psig)\n",
+    "print(f'Heater gas pressure: {heater_mpa:0.4f} ({heater_psig:0.4f})')\n",
+    "\n",
+    "# Hose to metering skid\n",
+    "def inches_to_cm(inch):\n",
+    "    return inch * 2.54\n",
+    "\n",
+    "hose_inches = 3\n",
+    "hose_cm = inches_to_cm(hose_inches)\n",
+    "print(f'Hose to metering skid has diameter of: {hose_cm:0.4f} cm ({hose_inches} inches)')\n",
+    "\n",
+    "butterfly_valve_pipe_inches = 6\n",
+    "butterfly_valve_pipe_cm = inches_to_cm(butterfly_valve_pipe_inches)\n",
+    "print(f'Thickness of pipe to release stacks: {butterfly_valve_pipe_cm} cm ({butterfly_valve_pipe_inches} inches)')\n",
+    "\n",
+    "quadratherm_pipe_inches = 140\n",
+    "quadratherm_pipe_cm = inches_to_cm(quadratherm_pipe_inches)\n",
+    "print(f'Upstream quadratherm pipe run: {quadratherm_pipe_cm} cm ({quadratherm_pipe_inches} in)')\n",
+    "\n",
+    "quadrather_pipe_downstream_inches = 12.5\n",
+    "print(f'Upstream quadratherm pipe run: {inches_to_cm(quadrather_pipe_downstream_inches)} cm ({quadrather_pipe_downstream_inches} in)')\n",
+    "\n",
+    "flange_small_in = 2\n",
+    "flange_large_in = 3\n",
+    "print(f'Flange is {inches_to_cm(flange_large_in)} cm ({flange_large_in} inches) to {inches_to_cm(flange_small_in)} cm ({flange_small_in} inches)')\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.31467011169671\n"
+     ]
+    }
+   ],
+   "source": [
+    "from methods_source import feet_per_meter\n",
+    "\n",
+    "# Feet per meter\n",
+    "feet_per_meter = feet_per_meter()\n",
+    "\n",
+    "feet_per_meter_cubic = feet_per_meter**3\n",
+    "print(feet_per_meter_cubic)"
    ],
    "metadata": {
     "collapsed": false
