--- a/11_paper_figures.ipynb
+++ b/11_paper_figures.ipynb
@@ -167,7 +167,7 @@
     "save_time = now.strftime(\"%Y%m%d\")\n",
     "save_path = pathlib.PurePath('04_figures', '01_paper_figs', f'combined_residuals_{save_time}')\n",
     "plt.savefig(save_path)\n",
-    "print('Figure saved')\n"
+    "print('Figure saved!!!')\n"
    ],
    "metadata": {
     "collapsed": false
