Add logistic curve to POD paper fig

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -1367,6 +1367,35 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58.04772562055257\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the standard deviation of Karios error?\n",
+    "from writing_analysis import calculate_residuals_and_error\n",
+    "operator = 'Kairos'\n",
+    "stage = 1\n",
+    "qc_status = 'pass_all'\n",
+    "\n",
+    "kairos_error = calculate_residuals_and_error(operator, stage, qc_status)\n",
+    "quant_mask = (kairos_error.non_zero_release == True) & (kairos_error.operator_detected == True) & (kairos_error.release_rate_kgh >= 10)\n",
+    "kairos_error = kairos_error.loc[quant_mask]\n",
+    "stdev_percent_error = kairos_error.quant_error_percent.std()\n",
+    "print(stdev_percent_error)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## Analyze Error Profile - Absolute, Percent Error\n",
