Added more code to reproduce key numbers in the text.

--- a/09_satellite_releases.ipynb
+++ b/09_satellite_releases.ipynb
@@ -118,7 +118,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(1564.0395977565, 1607.459717835)"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute max metered gas flow\n",
+    "\n",
+    "meter_data_11_15 = pd.read_csv(pathlib.Path('02_meter_data', 'daily_meter_data', 'whole_gas_clean', '11_15.csv'), index_col=0, parse_dates=['datetime_utc'])\n",
+    "meter_data_11_18 = pd.read_csv(pathlib.Path('02_meter_data', 'daily_meter_data', 'whole_gas_clean', '11_18.csv'), index_col=0, parse_dates=['datetime_utc'])\n",
+    "meter_data_11_15['methane_kgh'].max(), meter_data_11_18['methane_kgh'].max()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "outputs": [
     {
      "name": "stdout",
@@ -161,14 +188,30 @@
     "\n",
     "\n",
     "# Manually add approximate release rate for the cancelled October 20 ZY1 release\n",
-    "# Target whole-gas flow rate was 998 kg/h, max metered flow rate was ~1,500 kg/h. We estimate sigma as the 95% confidence\n",
+    "# Target whole-gas flow rate was 998 kg/h, max metered flow rate was the maximum metered rate during the campaign, ~1,600 kg/h. We estimate sigma as the 95% confidence\n",
     "# Assumed methane fraction is drawn from October 19th: 0.946018\n",
     "ZY1_methanefraction_20221020 = 0.946018\n",
-    "summary.loc[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00'), ['gas_kgh_mean', 'gas_kgh_sigma', 'CH4_kgh_mean', 'CH4_kgh_sigma', 'ch4_fraction_km','ch4_fraction_km_sigma']] = [998, 256, 998*ZY1_methanefraction_20221020, 256*ZY1_methanefraction_20221020, ZY1_methanefraction_20221020, 0.002406931]\n",
+    "target_flow = 998 # the target flow rate, in kg(gas)/hr\n",
+    "sdev_to_95CI = 1.96 # Conversion factor from standard deviation to 95% confidence interval\n",
+    "target_flow_ch4 = target_flow*ZY1_methanefraction_20221020 # The target flow rate, in methane mass\n",
+    "max_achieved_flow_campaign = meter_data_11_18['methane_kgh'].max() # the max flow rate achieved over the full campaign\n",
+    "max_achieved_flow_campaign_ch4 = max_achieved_flow_campaign*ZY1_methanefraction_20221020\n",
+    "implied_flow_sd_gas = (max_achieved_flow_campaign - target_flow)/sdev_to_95CI\n",
+    "implied_flow_sd_ch4 = (max_achieved_flow_campaign_ch4 - target_flow_ch4)/sdev_to_95CI\n",
+    "zy1_index = summary[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00')].index\n",
+    "vars_to_add = ['gas_kgh_mean', 'gas_kgh_sigma', 'ch4_kgh_mean', 'ch4_kgh_sigma', 'ch4_fraction_km','ch4_fraction_km_sigma']\n",
+    "num_variables = vars_to_add.__len__()\n",
+    "vals_to_add_array = pd.DataFrame([[target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931]]*num_variables, index=zy1_index)\n",
+    "vals_to_add_array.columns = vars_to_add\n",
+    "summary.loc[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00'), vars_to_add] = vals_to_add_array # [[target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931]]*num_variables\n",
+    "\n",
+    "# zy1_index = summary[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00')].index\n",
+    "# summary.loc[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00'), ['ch4_kgh_mean', 'ch4_kgh_sigma', 'ch4_kgh_mean', 'ch4_kgh_sigma', 'ch4_fraction_km','ch4_fraction_km_sigma']] = pd.Series([target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931], index = zy1_index)\n",
+    "# summary.loc[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00'), ['ch4_kgh_mean', 'ch4_kgh_sigma', 'ch4_kgh_mean', 'ch4_kgh_sigma', 'ch4_fraction_km','ch4_fraction_km_sigma']] = [target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931]\n",
     "\n",
     "# print(summary)\n",
     "# # summary.to_csv(pathlib.PurePath('01_clean_reports', 'Satellite_results_consolidated_clean_20230405.csv'))\n",
-    "summary.to_csv(pathlib.PurePath('05_satellites', '01_input_data', 'Satellite_results_consolidated_clean_20230526.csv'))"
+    "summary.to_csv(pathlib.PurePath('05_satellites', '01_input_data', 'Satellite_results_consolidated_clean_20230526b.csv'))"
    ],
    "metadata": {
     "collapsed": false,
@@ -179,41 +222,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "outputs": [
     {
      "data": {
-      "text/plain": "     gas_kgh_mean  gas_kgh_sigma  CH4_kgh_mean  CH4_kgh_sigma\n68          998.0          256.0    944.125964     242.180608\n92          998.0          256.0    944.125964     242.180608\n197         998.0          256.0    944.125964     242.180608\n276         998.0          256.0    944.125964     242.180608\n300         998.0          256.0    944.125964     242.180608\n405         998.0          256.0    944.125964     242.180608",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gas_kgh_mean</th>\n      <th>gas_kgh_sigma</th>\n      <th>CH4_kgh_mean</th>\n      <th>CH4_kgh_sigma</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>68</th>\n      <td>998.0</td>\n      <td>256.0</td>\n      <td>944.125964</td>\n      <td>242.180608</td>\n    </tr>\n    <tr>\n      <th>92</th>\n      <td>998.0</td>\n      <td>256.0</td>\n      <td>944.125964</td>\n      <td>242.180608</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>998.0</td>\n      <td>256.0</td>\n      <td>944.125964</td>\n      <td>242.180608</td>\n    </tr>\n    <tr>\n      <th>276</th>\n      <td>998.0</td>\n      <td>256.0</td>\n      <td>944.125964</td>\n      <td>242.180608</td>\n    </tr>\n    <tr>\n      <th>300</th>\n      <td>998.0</td>\n      <td>256.0</td>\n      <td>944.125964</td>\n      <td>242.180608</td>\n    </tr>\n    <tr>\n      <th>405</th>\n      <td>998.0</td>\n      <td>256.0</td>\n      <td>944.125964</td>\n      <td>242.180608</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "        Team Satellite PerformerExperimentID FacilityID  EquipmentUnitID  \\\n68   Kayrros       ZY1                     2          1              1.0   \n92      LARS       ZY1                     2          1              1.0   \n197      NJU       ZY1                     2          1              1.0   \n276  Kayrros       ZY1                     2          1              1.0   \n300     LARS       ZY1                     2          1              1.0   \n405      NJU       ZY1                     2          1              1.0   \n\n    DateOfSurvey Timestamp (hyperspectral technologies only) StartTime  \\\n68    2022-10-20                                    18:30:42       NaN   \n92    2022-10-20                                    18:30:42       NaN   \n197   2022-10-20                                    18:30:42  18:30:00   \n276   2022-10-20                                    18:30:42       NaN   \n300   2022-10-20                                    18:30:42       NaN   \n405   2022-10-20                                    18:30:42  18:30:00   \n\n      EndTime SurveyTime  ... ch4_fraction_km ch4_fraction_km_sigma  \\\n68        NaN        NaN  ...        0.946018              0.002407   \n92        NaN        NaN  ...        0.946018              0.002407   \n197  18:31:00        NaN  ...        0.946018              0.002407   \n276       NaN        NaN  ...        0.946018              0.002407   \n300       NaN        NaN  ...        0.946018              0.002407   \n405  18:31:00        NaN  ...        0.946018              0.002407   \n\n    ch4_kgh_mean ch4_kgh_mean ch4_kgh_sigma ch4_kgh_sigma average_windspeed  \\\n68    944.125964   944.125964           0.0           0.0               NaN   \n92    944.125964   944.125964           0.0           0.0               NaN   \n197   944.125964   944.125964           0.0           0.0               NaN   \n276   944.125964   944.125964           0.0           0.0               NaN   \n300   944.125964   944.125964           0.0           0.0               NaN   \n405   944.125964   944.125964           0.0           0.0               NaN   \n\n    average_winddirection stdev_windspeed stdev_winddirection  \n68                    NaN             NaN                 NaN  \n92                    NaN             NaN                 NaN  \n197                   NaN             NaN                 NaN  \n276                   NaN             NaN                 NaN  \n300                   NaN             NaN                 NaN  \n405                   NaN             NaN                 NaN  \n\n[6 rows x 42 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Team</th>\n      <th>Satellite</th>\n      <th>PerformerExperimentID</th>\n      <th>FacilityID</th>\n      <th>EquipmentUnitID</th>\n      <th>DateOfSurvey</th>\n      <th>Timestamp (hyperspectral technologies only)</th>\n      <th>StartTime</th>\n      <th>EndTime</th>\n      <th>SurveyTime</th>\n      <th>...</th>\n      <th>ch4_fraction_km</th>\n      <th>ch4_fraction_km_sigma</th>\n      <th>ch4_kgh_mean</th>\n      <th>ch4_kgh_mean</th>\n      <th>ch4_kgh_sigma</th>\n      <th>ch4_kgh_sigma</th>\n      <th>average_windspeed</th>\n      <th>average_winddirection</th>\n      <th>stdev_windspeed</th>\n      <th>stdev_winddirection</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>68</th>\n      <td>Kayrros</td>\n      <td>ZY1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1.0</td>\n      <td>2022-10-20</td>\n      <td>18:30:42</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n      <td>944.125964</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>92</th>\n      <td>LARS</td>\n      <td>ZY1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1.0</td>\n      <td>2022-10-20</td>\n      <td>18:30:42</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n      <td>944.125964</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>NJU</td>\n      <td>ZY1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1.0</td>\n      <td>2022-10-20</td>\n      <td>18:30:42</td>\n      <td>18:30:00</td>\n      <td>18:31:00</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n      <td>944.125964</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>276</th>\n      <td>Kayrros</td>\n      <td>ZY1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1.0</td>\n      <td>2022-10-20</td>\n      <td>18:30:42</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n      <td>944.125964</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>300</th>\n      <td>LARS</td>\n      <td>ZY1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1.0</td>\n      <td>2022-10-20</td>\n      <td>18:30:42</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n      <td>944.125964</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>405</th>\n      <td>NJU</td>\n      <td>ZY1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1.0</td>\n      <td>2022-10-20</td>\n      <td>18:30:42</td>\n      <td>18:30:00</td>\n      <td>18:31:00</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n      <td>944.125964</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>6 rows × 42 columns</p>\n</div>"
      },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "3.141592653589793"
-     },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.pi"
+    "zy1_index = summary[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00')].index\n",
+    "vars_to_add = ['gas_kgh_mean', 'gas_kgh_sigma', 'ch4_kgh_mean', 'ch4_kgh_sigma', 'ch4_fraction_km','ch4_fraction_km_sigma']\n",
+    "num_variables = vars_to_add.__len__()\n",
+    "vals_to_add_array = pd.DataFrame([[target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931]]*num_variables, index=zy1_index)\n",
+    "vals_to_add_array.columns = vars_to_add\n",
+    "summary.loc[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00'), vars_to_add] = vals_to_add_array # [[target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931]]*num_variables\n",
+    "summary.loc[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00')]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     ch4_kgh_mean  ch4_kgh_sigma  ch4_kgh_mean  ch4_kgh_sigma  \\\n68            998            0.0    944.125964            0.0   \n92            998            0.0    944.125964            0.0   \n197           998            0.0    944.125964            0.0   \n276           998            0.0    944.125964            0.0   \n300           998            0.0    944.125964            0.0   \n405           998            0.0    944.125964            0.0   \n\n     ch4_fraction_km  ch4_fraction_km_sigma  \n68          0.946018               0.002407  \n92          0.946018               0.002407  \n197         0.946018               0.002407  \n276         0.946018               0.002407  \n300         0.946018               0.002407  \n405         0.946018               0.002407  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ch4_kgh_mean</th>\n      <th>ch4_kgh_sigma</th>\n      <th>ch4_kgh_mean</th>\n      <th>ch4_kgh_sigma</th>\n      <th>ch4_fraction_km</th>\n      <th>ch4_fraction_km_sigma</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>68</th>\n      <td>998</td>\n      <td>0.0</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n    </tr>\n    <tr>\n      <th>92</th>\n      <td>998</td>\n      <td>0.0</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n    </tr>\n    <tr>\n      <th>197</th>\n      <td>998</td>\n      <td>0.0</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n    </tr>\n    <tr>\n      <th>276</th>\n      <td>998</td>\n      <td>0.0</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n    </tr>\n    <tr>\n      <th>300</th>\n      <td>998</td>\n      <td>0.0</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n    </tr>\n    <tr>\n      <th>405</th>\n      <td>998</td>\n      <td>0.0</td>\n      <td>944.125964</td>\n      <td>0.0</td>\n      <td>0.946018</td>\n      <td>0.002407</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (summary[(summary['Satellite'] == 'ZY1') & (summary['DateOfSurvey'] == '10/20/22 0:00')].shape)[0]\n",
+    "# pd.Series([target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931], index = zy1_index)\n",
+    "# pd.DataFrame([[target_flow, implied_flow_sd_gas, target_flow_ch4, implied_flow_sd_ch4, ZY1_methanefraction_20221020, 0.002406931]]*num_variables, index=zy1_index)\n",
+    "vals_to_add_array"
    ],
    "metadata": {
     "collapsed": false,
