Changes based on Adam's feedback

--- a/00_gas_comp_data_calculations.ipynb
+++ b/00_gas_comp_data_calculations.ipynb
@@ -31,8 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tap 1 mean: 0.94534\n",
+      "Tap 2 mean: 0.94524\n",
+      "Tap 1 standard deviation: 0.006320\n",
+      "Tap 2 standard deviation: 0.006268\n",
+      "Methane mole fraction for entire study period (both taps): 0.9453\n",
+      " (Standard deviation: 0.0062)\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
@@ -45,7 +58,23 @@
     "# Load gas composition spreadsheet that contains refill dates and the su_raw and su_normalized values\n",
     "import_cols = ['refill_no', 'rawhide_refill_date', 'start_utc', 'end_utc', 'notes', 'su_notes', 'ms_composition_date', 'su_raw', 'su_normalized']\n",
     "gas_comp_summary = pd.read_csv(pathlib.PurePath('02_meter_data', 'gas_comp_clean_su.csv'),\n",
-    "                               nrows=15, usecols=import_cols, parse_dates=['start_utc', 'end_utc', 'ms_composition_date'])"
+    "                               nrows=15, usecols=import_cols, parse_dates=['start_utc', 'end_utc', 'ms_composition_date'])\n",
+    "\n",
+    "mole_frac = ms_df[['tap_1', 'tap_2']]\n",
+    "tap_1_mean = mole_frac.tap_1.mean()\n",
+    "tap_2_mean  = mole_frac.tap_2.mean()\n",
+    "tap_1_stdev = mole_frac.tap_1.std()\n",
+    "tap_2_stdev = mole_frac.tap_2.std()\n",
+    "\n",
+    "# calculate mean methane across both taps\n",
+    "mean_methane = mole_frac.values.mean(axis=None)\n",
+    "stdev_methane = mole_frac.values.std()\n",
+    "\n",
+    "print(f'Tap 1 mean: {tap_1_mean:0.5f}')\n",
+    "print(f'Tap 2 mean: {tap_2_mean:0.5f}')\n",
+    "print(f'Tap 1 standard deviation: {tap_1_stdev:0.6f}')\n",
+    "print(f'Tap 2 standard deviation: {tap_2_stdev:0.6f}')\n",
+    "print(f'Methane mole fraction for entire study period (both taps): {mean_methane:0.4f}\\n (Standard deviation: {stdev_methane:0.4f})')\n"
    ],
    "metadata": {
     "collapsed": false
